Closed loop beta version